feat(identity): add Role and Address entities, refactor User entity